--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=<h1>, initial-scale=Hello Git" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
     <h1>Hello Git</h1>
-    <script src="script.js"></script>
+    <script src="src/script.js"></script>
   </body>
 </html>
