--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=<h1>, initial-scale=Hello Git" />
-    <title>Document</title>
+    <title>Vanilla JS Weather App</title>
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
     <h1>Hello Git</h1>
+    <a href="#" class="btn btn-primary">click me</a>
     <script src="src/script.js"></script>
   </body>
 </html>
