--- a/index.html
+++ b/index.html
@@ -10,8 +10,40 @@
     <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
-    <h1>Hello Git</h1>
-    <a href="#" class="btn btn-primary">click me</a>
+    <div class="container">
+      <h1>Vanilla JS Weather App</h1>
+        <h2 id="city">Calgary</h2>
+        <div class="col-6"></div>
+        <a href="#" class="btn btn-primary">click me</a>
+        <ul>
+          <li>
+            Friday
+          </li>
+          <li>
+            Clear
+          </li>
+        </ul>
+        <div class="row">
+          <div class="col-6">
+            <img src="https://ssl.gstatic.com/onebox/weather/64/cloudy.png" alt="cloudy">
+            12°C
+          </div>
+          <div class="col-6">
+            <ul>
+              <li>
+                Precipitation 0%
+              </li>
+              <li>
+                Humidity 73%
+              </li>
+              <li>
+                Wind 2m/s
+              </li>
+            </ul>
+          </div>
+        </div>
+        <small><a href="https://github.com/KayleeBeyene/my-awesome-app">Open-source</a> code by Kaylee Beyene and hosted on <a href="https://www.netlify.com/"> Netlify</a></small>
+    </div>
     <script src="src/script.js"></script>
   </body>
 </html>
