--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
   </head>
   <body>
     <div class="container">
-      <h1>Vanilla JS Weather App</h1>
-        <h2 id="city">Calgary</h2>
+      
+      <div class="weather-app">
+        <h1 id="city">Calgary</h1>
         <div class="col-6"></div>
         <a href="#" class="btn btn-primary">click me</a>
         <ul>
@@ -41,6 +42,7 @@
               </li>
             </ul>
           </div>
+        </div>
         </div>
         <small><a href="https://github.com/KayleeBeyene/my-awesome-app">Open-source</a> code by Kaylee Beyene and hosted on <a href="https://www.netlify.com/"> Netlify</a></small>
     </div>
