--- a/index.html
+++ b/index.html
@@ -11,40 +11,47 @@
   </head>
   <body>
     <div class="container">
-      
-      <div class="weather-app">
-        <h1 id="city">Calgary</h1>
-        <div class="col-6"></div>
-        <a href="#" class="btn btn-primary">click me</a>
-        <ul>
-          <li>
-            Friday
-          </li>
-          <li>
-            Clear
-          </li>
-        </ul>
-        <div class="row">
-          <div class="col-6">
-            <img src="https://ssl.gstatic.com/onebox/weather/64/cloudy.png" alt="cloudy">
+      <div class="weather-app-wrapper">
+        <div class="weather-app">
+        <div class="overview">
+      <h1>
+        Calgary
+      </h1>
+      <ul>
+        <li>
+          Friday 05:00
+        </li>
+        <li>
+          Clear
+        </li>
+      </ul>
+    </div>
+      <div class="row">
+        <div class="col-6">
+          <div class="clearfix">
+          <img src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png" alt="Clear" class="float-left" />
+          <div class="float-left">
             12°C
           </div>
-          <div class="col-6">
-            <ul>
-              <li>
-                Precipitation 0%
-              </li>
-              <li>
-                Humidity 73%
-              </li>
-              <li>
-                Wind 2m/s
-              </li>
-            </ul>
-          </div>
         </div>
         </div>
-        <small><a href="https://github.com/KayleeBeyene/my-awesome-app">Open-source</a> code by Kaylee Beyene and hosted on <a href="https://www.netlify.com/"> Netlify</a></small>
+        <div class="col-6">
+          <ul>
+            <li>
+              Precipitation
+            </li>
+            <li>
+              Humidity
+            </li>
+            <li>
+              Wind
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+      <small><a href="https://github.com/KayleeBeyene/my-awesome-app">Open-source</a> code by Kaylee Beyene</small>
+    </div>
     </div>
     <script src="src/script.js"></script>
   </body>
