aligned current temp and icon

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
       <div class="row">
         <div class="col-6">
-          <div class="clearfix">
+          <div class="clearfix current-temp">
           <img src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png" alt="Clear" class="float-left" />
           <div class="float-left">
             12°C
@@ -36,7 +36,7 @@
         </div>
         </div>
         <div class="col-6">
-          <ul>
+          <ul> 
             <li>
               Precipitation
             </li>
