--- a/index.html
+++ b/index.html
@@ -6,52 +6,52 @@
     <meta name="viewport" content="width=<h1>, initial-scale=Hello Git" />
     <title>Vanilla JS Weather App</title>
     <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
     <div class="container">
       <div class="weather-app-wrapper">
         <div class="weather-app">
-        <div class="overview">
-      <h1>
-        Calgary
-      </h1>
-      <ul>
-        <li>
-          Friday 05:00
-        </li>
-        <li>
-          Clear
-        </li>
-      </ul>
-    </div>
-      <div class="row">
-        <div class="col-6">
-          <div class="clearfix current-temp">
-          <img src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png" alt="Clear" class="float-left" />
-          <div class="float-left">
-            12°C
+          <div class="overview">
+            <h1>Calgary</h1>
+            <ul>
+              <li>Friday 05:00</li>
+              <li>Clear</li>
+            </ul>
+          </div>
+          <div class="row">
+            <div class="col-6">
+              <div class="clearfix current-temp">
+                <img
+                  src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
+                  alt="Clear"
+                  class="float-start"
+                />
+                <div class="float-start">12°C</div>
+              </div>
+            </div>
+            <div class="col-6">
+              <ul>
+                <li>Precipitation</li>
+                <li>Humidity</li>
+                <li>Wind</li>
+              </ul>
+            </div>
           </div>
         </div>
-        </div>
-        <div class="col-6">
-          <ul> 
-            <li>
-              Precipitation
-            </li>
-            <li>
-              Humidity
-            </li>
-            <li>
-              Wind
-            </li>
-          </ul>
-        </div>
+        <small
+          ><a href="https://github.com/KayleeBeyene/my-awesome-app"
+            >Open-source</a
+          >
+          code by Kaylee Beyene</small
+        >
       </div>
-    </div>
-      <small><a href="https://github.com/KayleeBeyene/my-awesome-app">Open-source</a> code by Kaylee Beyene</small>
-    </div>
     </div>
     <script src="src/script.js"></script>
   </body>
