Styled the temperature section

--- a/index.html
+++ b/index.html
@@ -27,13 +27,15 @@
           </div>
           <div class="row">
             <div class="col-6">
-              <div class="clearfix current-temp">
+              <div class="clearfix weather-temperature">
                 <img
                   src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
                   alt="Clear"
                   class="float-start"
                 />
-                <div class="float-start">12°C</div>
+                <div class="float-start">
+                  <strong> 12</strong><span class="units">°C</span>
+                </div>
               </div>
             </div>
             <div class="col-6">
